--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   get_it: ^7.7.0
   talker: ^4.4.1
   talker_flutter: ^4.4.1
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  build_runner: ^2.4.12
+  json_serializable: ^6.8.0
+  json_annotation: ^4.9.0
+  talker_dio_logger: ^4.4.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
